--- a/test/mapTest.html
+++ b/test/mapTest.html
@@ -12,7 +12,7 @@
 <div id="baidu_map"></div>
 
 <!--百度地图示例-->
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=b3BZ6lWfIMDZv3giTvLB2b8X"></script>
+<script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=b3BZ6lWfIMDZv3giTvLB2b8X"></script>
 <script type="text/javascript">
 
     // 百度地图API功能
