--- a/test/mapTest.html
+++ b/test/mapTest.html
@@ -4,12 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
+        .map{
+            width : 50%;
+            height : 300px;
+        }
     </style>
 
     <title>地图展示</title>
 </head>
 <body>
-<div id="baidu_map"></div>
+<div class="map" id="baidu_map"></div>
 
 <!--百度地图示例-->
 <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=b3BZ6lWfIMDZv3giTvLB2b8X"></script>
