--- a/test/mapTest.html
+++ b/test/mapTest.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div class="map" id="baidu_map"></div>
+<label></label>
 
 <!--百度地图示例-->
 <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=b3BZ6lWfIMDZv3giTvLB2b8X"></script>
@@ -23,9 +24,11 @@
     var map = new BMap.Map("baidu_map");
     var point = new BMap.Point(116.331398,39.897445);
     map.centerAndZoom(point,12);
+    map.enableScrollWheelZoom(true);
 
     var geolocation = new BMap.Geolocation();
     geolocation.getCurrentPosition(function(r){
+        console.log(r);
         if(this.getStatus() == BMAP_STATUS_SUCCESS){
             var mk = new BMap.Marker(r.point);
             map.addOverlay(mk);
