--- a/test/mapTest.html
+++ b/test/mapTest.html
@@ -16,23 +16,23 @@
 <div class="map" id="baidu_map"></div>
 <label></label>
 
+<div class="map" id="gaode_map"></div>
 <!--百度地图示例-->
 <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=b3BZ6lWfIMDZv3giTvLB2b8X"></script>
 <script type="text/javascript">
 
     // 百度地图API功能
-    var map = new BMap.Map("baidu_map");
-    var point = new BMap.Point(116.331398,39.897445);
-    map.centerAndZoom(point,12);
-    map.enableScrollWheelZoom(true);
+    var baiduMap = new BMap.Map("baidu_map");
+    baiduMap.enableScrollWheelZoom(true);
 
-    var geolocation = new BMap.Geolocation();
-    geolocation.getCurrentPosition(function(r){
+    var baiduGeolocation = new BMap.Geolocation();
+    baiduGeolocation.getCurrentPosition(function(r){
         console.log(r);
         if(this.getStatus() == BMAP_STATUS_SUCCESS){
             var mk = new BMap.Marker(r.point);
-            map.addOverlay(mk);
-            map.panTo(r.point);
+            baiduMap.addOverlay(mk);
+            baiduMap.panTo(r.point);
+            baiduMap.centerAndZoom(r.point,12);
         }else {
             var codeMap = {
                 BMAP_STATUS_SUCCESS: '检索成功',
@@ -61,5 +61,43 @@
 </script>
 
 
+<!--高德地图示例-->
+<script type="text/javascript" src="//webapi.amap.com/maps?v=1.3&key=3d6c152d283ddb04a39410a9e38b515c"></script>
+<script type="text/javascript">
+//    var map = new AMap.Map('gaode_map',{
+//        resizeEnable: true,
+//        zoom: 10,
+//        center: [116.480983, 40.0958]
+//    });
+//    marker = new AMap.Marker({
+//        icon: "http://webapi.amap.com/theme/v1.3/markers/n/mark_b.png",
+//        position: [116.405467, 39.907761]
+//    });
+//    marker.setMap(map);
+    var gaodeMap, gaodeGeolocation;
+    //加载地图，调用浏览器定位服务
+    gaodeMap = new AMap.Map('gaode_map', {
+        resizeEnable: true
+    });
+    gaodeMap.plugin('AMap.Geolocation', function() {
+        gaodeGeolocation = new AMap.Geolocation({
+            enableHighAccuracy: true,//是否使用高精度定位，默认:true
+            timeout: 10000,          //超过10秒后停止定位，默认：无穷大
+            buttonOffset: new AMap.Pixel(10, 20),//定位按钮与设置的停靠位置的偏移量，默认：Pixel(10, 20)
+            zoomToAccuracy: true,      //定位成功后调整地图视野范围使定位位置及精度范围视野内可见，默认：false
+            buttonPosition:'RB'
+        });
+        gaodeMap.addControl(geolocation);
+        gaodeGeolocation.getCurrentPosition();
+        AMap.event.addListener(geolocation, 'complete', function(data) {
+            console.log('高德地图定位成功');
+            console.log('经度：' , data.position.getLng());
+            console.log('纬度：' , data.position.getLat());
+        });
+        AMap.event.addListener(geolocation, 'error', function(e){
+            console.log('高德地图定位失败',e);
+        });
+    });
+</script>
 </body>
 </html>
