--- a/test/mapTest.html
+++ b/test/mapTest.html
@@ -87,7 +87,7 @@
             zoomToAccuracy: true,      //定位成功后调整地图视野范围使定位位置及精度范围视野内可见，默认：false
             buttonPosition:'RB'
         });
-        gaodeMap.addControl(geolocation);
+        gaodeMap.addControl(gaodeGeolocation);
         gaodeGeolocation.getCurrentPosition();
         AMap.event.addListener(geolocation, 'complete', function(data) {
             console.log('高德地图定位成功');
