--- a/test/mapTest.html
+++ b/test/mapTest.html
@@ -29,10 +29,11 @@
     baiduGeolocation.getCurrentPosition(function(r){
         console.log('百度地图定位成功:',r);
         if(this.getStatus() == BMAP_STATUS_SUCCESS){
-            var mk = new BMap.Marker(r.point);
-            baiduMap.addOverlay(mk);
-            baiduMap.panTo(r.point);
-            baiduMap.centerAndZoom(mk,12);
+            var point = new BMap.Point(r.point);
+            baiduMap.centerAndZoom(point,12);
+            baiduMap.panTo(point);
+//            var mk = new BMap.Marker(r.point);
+//            baiduMap.addOverlay(mk);
         }else {
             var codeMap = {
                 BMAP_STATUS_SUCCESS: '检索成功',
