--- a/test/mapTest.html
+++ b/test/mapTest.html
@@ -32,6 +32,7 @@
             var mk = new BMap.Marker(r.point);
             baiduMap.addOverlay(mk);
             baiduMap.panTo(r.point);
+            map.centerAndZoom(r.point,12);
         }else {
             var codeMap = {
                 BMAP_STATUS_SUCCESS: '检索成功',
